<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <include
      layout="@layout/view_title_bar"
      android:id="@+id/layout_title_bar"
      />

  <TextView
      android:id="@+id/tv_resume_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:text="test"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/layout_title_bar"
      />
  <TextView
      android:id="@+id/tv_applicant_company"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="10dp"
      android:text="@string/position_and_company"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_resume_name"
      />

  <ImageView
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:src="@mipmap/ic_launcher"
      android:tint="@color/view_button_bg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/layout_title_bar"
      />
  <View
      android:id="@+id/view_divider"
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@color/popup_outside_bg"
      app:layout_constraintTop_toBottomOf="@id/tv_applicant_company"
      />

  <TextView
      android:id="@+id/tv_in_service"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/on_the_job"
      android:textColor="@color/popup_outside_bg"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_divider"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/active"
      android:textColor="@color/popup_outside_bg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_divider"
      />
  <TextView
      android:id="@+id/tv_applicant_education"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/applicant_base_info"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_in_service"
      />

  <TextView
      android:id="@+id/tv_applicant_experience"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/applicant_work_experience"
      android:textColor="@color/popup_outside_bg"
      android:textSize="14sp"
      app:layout_constraintTop_toBottomOf="@id/tv_applicant_education"
      />
  <View
      android:id="@+id/view_divider1"
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@color/popup_outside_bg"
      app:layout_constraintTop_toBottomOf="@id/tv_applicant_experience"
      />

  <TextView
      android:id="@+id/tv_applicant_expect"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/job_expectation"
      android:textColor="@color/popup_outside_bg"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_divider1"
      />
  <TextView
      android:id="@+id/tv_applicant_position"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/applicant_work_position"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_applicant_expect"
      />

  <View
      android:id="@+id/view_divider2"
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@color/popup_outside_bg"
      app:layout_constraintTop_toBottomOf="@id/tv_applicant_position"
      />
  <TextView
      android:id="@+id/tv_work_experience"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/work_experience"
      android:textColor="@color/popup_outside_bg"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_divider2"
      />
  <TextView
      android:id="@+id/tv_applicant_company_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/applicant_work_company"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_work_experience"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="20dp"
      android:text="@string/work_range"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/tv_applicant_company_name"
      />
  <Button
      android:id="@+id/btn_resume_buy"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@color/popup_item_text_color"
      android:text="@string/buy_a_resume"
      android:textColor="@color/white_color"
      android:textSize="18sp"
      android:textAllCaps="false"
      app:layout_constraintTop_toBottomOf="@id/tv_applicant_company_name"
      />
</android.support.constraint.ConstraintLayout>