<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <include
      layout="@layout/view_title_bar"
      android:id="@+id/layout_title_bar"
      />

  <TextView
      android:id="@+id/tv_position_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="30dp"
      android:text="@string/java_engineer"
      android:textSize="25sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/layout_title_bar"
      />
  <TextView
      android:id="@+id/tv_position_require"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/applicant_base_info"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_position_name"
      />

  <View
      android:id="@+id/view_divider"
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="20dp"
      android:background="@color/popup_outside_bg"
      app:layout_constraintTop_toBottomOf="@id/tv_position_require"
      />

  <TextView
      android:id="@+id/tv_interviewer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="boss"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_divider"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/interviewer_info"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_interviewer"
      />
  <View
      android:id="@+id/view_divider1"
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="40dp"
      android:background="@color/popup_outside_bg"
      app:layout_constraintTop_toBottomOf="@id/tv_interviewer"
      />
  <TextView
      android:id="@+id/tv_position_details"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/position_detail"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_divider1"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="10dp"
      android:text="@string/position_introduction"
      android:textColor="@color/popup_outside_bg"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_position_details"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="40dp"
      android:text="@string/last_job_details"
      android:textColor="@color/popup_outside_bg"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_position_details"
      />
  <Button
      android:id="@+id/btn_authorization"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginBottom="50dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:background="@color/popup_item_text_color"
      android:text="@string/resume_authorization"
      android:textAllCaps="false"
      android:textColor="@color/white_color"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      />
</android.support.constraint.ConstraintLayout>