<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
      <TextView
          android:id="@+id/tv_introduction"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="20dp"
          android:padding="20dp"
          android:text="@string/resume_info_description"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          />

      <LinearLayout
          android:id="@+id/layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:background="@drawable/shape_white_bg"
          android:orientation="vertical"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          app:layout_constraintTop_toBottomOf="@id/tv_introduction"
          >
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/main_bottom_bg"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/sex"
              android:textSize="18sp"
              />
          <RadioGroup
              android:id="@+id/rg_sex"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:orientation="horizontal"
              >
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawablePadding="10dp"
                android:text="@string/female"
                />
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawablePadding="10dp"
                android:text="@string/male"
                />
          </RadioGroup>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/main_bottom_bg"
            />
        <RelativeLayout
            android:id="@+id/rl_start_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:text="@string/workours"
              android:textSize="18sp"
              />
          <ImageView
              android:id="@+id/iv_arrow"
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:src="@drawable/icon_right_arrow"
              />
          <TextView
              android:id="@+id/tv_date_show"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:layout_marginRight="20dp"
              android:text="@string/choose"
              />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/main_bottom_bg"
            />
        <RelativeLayout
            android:id="@+id/rl_birthday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:text="@string/birthday"
              android:textSize="18sp"
              />
          <TextView
              android:id="@+id/tv_birthday_show"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:layout_marginRight="20dp"
              />
          <ImageView
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:src="@drawable/icon_right_arrow"
              />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/main_bottom_bg"
            />
        <RelativeLayout
            android:id="@+id/rl_company"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:text="@string/company_name"
              android:textSize="18sp"
              />
          <TextView
              android:id="@+id/tv_company"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:layout_marginRight="20dp"
              />
          <ImageView
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:layout_alignParentRight="true"
              android:layout_centerVertical="true"
              android:src="@drawable/icon_right_arrow"
              />
        </RelativeLayout>

      </LinearLayout>

      <TextView
          android:id="@+id/tv_job_content"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="20dp"
          android:text="@string/last_job"
          android:textSize="18sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/layout"
          />
      <TextView
          android:id="@+id/tv_job_content_info"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/shape_white_bg"
          android:padding="20dp"
          android:text="@string/last_job_details"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_job_content"
          />

      <Button
          android:id="@+id/btn_next"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:layout_marginTop="10dp"
          android:background="@color/view_button_bg"
          android:text="@string/next"
          android:textColor="@color/white_color"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_job_content_info"
          />
    </android.support.constraint.ConstraintLayout>
  </ScrollView>


</android.support.constraint.ConstraintLayout>