<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    >


  <android.support.v7.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      app:cardCornerRadius="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >
      <TextView
          android:id="@+id/tv_popup_album"
          android:layout_width="match_parent"
          android:layout_height="@dimen/popup_item_height"
          android:gravity="center"
          android:text="@string/string_album"
          android:textColor="@color/popup_item_text_color"
          />
      <View
          android:id="@+id/view_divider"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/darker_gray"
          />

      <TextView
          android:id="@+id/tv_popup_take_a_picture"
          android:layout_width="match_parent"
          android:layout_height="@dimen/popup_item_height"
          android:gravity="center"
          android:text="@string/string_take_a_picture"
          android:textColor="@color/popup_item_text_color"
          />

    </LinearLayout>

  </android.support.v7.widget.CardView>


  <android.support.v7.widget.CardView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:cardCornerRadius="10dp"

      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView"
      >

    <TextView
        android:id="@+id/tv_popup_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_item_height"
        android:gravity="center"
        android:text="@string/string_cancel"
        android:textColor="@color/popup_item_text_color"
        />

  </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>